# squeakroad

./: .dockerignore  .flake8  .gitignore  .licensure.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  PGP.txt  README.md  Rocket.toml  ca-certificates.crt  clightning-config.ini  config-mainnet.ini  config.ini  createdb.sql  entrypoint.sh  requirements-dev.txt  requirements-itest.txt  requirements.txt  setup.cfg  setup.py  sqlx-data.json  tox.ini
.github/workflows/: ci.yaml  docker.yaml
agora-lnd-client/: Cargo.toml  build.rs
agora-lnd-client/src/: error.rs  lib.rs
db/migrations/: 20220622001756_create_listings_table.sql  20220622091410_create_listing_images.sql  20220623231049_add_primary_image_column.sql  20220624001841_rename_submitted_column.sql  20220624063718_create_shipping_options.sql  20220624184431_add_title_column_shipping_item.sql  20220625022727_add_public_id_column.sql  20220625042433_add_public_id_for_image.sql  20220625192550_add_public_id_for_listing.sql  20220626053324_add_removed_column.sql  20220626054738_add_quantity_column.sql  20220626065849_add_reviewed_column.sql  20220626072033_add_admin_settings_table.sql  20220628185925_add_fee_rate_column.sql  20220628200913_add_orders_table.sql  20220628214529_add_public_id_for_order.sql  20220629005221_add_quantity_for_order.sql  20220629021241_rename_amound_owed_in_order.sql  20220630222612_add_lightning_invoice_to_order.sql  20220702213213_add_withdrawals_table.sql  20220703232538_denormalize_seller_user_id.sql  20220703234847_rename_buyer_user_id.sql  20220704014010_add_order_messages_table.sql  20220704181854_add_acked_column_to_orders.sql  20220704205208_add_payment_time_to_orders.sql  20220705015847_add_review_columns_to_orders.sql  20220707003342_add_squeaknode_columns_to_admin.sql  20220707012554_create_user_settings_table.sql  20220707014722_add_user_id_to_user_settings.sql  20220707041633_initial_migration.sql  20220710032737_add_pgp_key_columns.sql  20220711033257_rename_pgp_key_columns.sql  20220711054422_remove_messages_table.sql  20220711060655_rename_completed_to_processing.sql  20220711062644_remove_quantity_from_listing.sql  20220711070439_rename_processing_to_shipped.sql  20220711072504_remove_acked_from_order.sql  20220711074106_add_canceled_columns_to_order.sql  20220711200807_initial_migration.sql  20220716222336_add_invoice_expiry_to_orders.sql  (+7 more)
docker/: config-clightning.ini  config.ini  docker-compose.mainnet.yml  docker-compose.override.yml  docker-compose.yml
docker/btcd/: Dockerfile  start-btcctl.sh  start-btcd.sh
docker/test/: Dockerfile
docs/: configuration.md  database-migration.md  development.md  getting-started.md
frontend/: .eslintignore  .gitignore  Makefile  build-protos.sh  make-build.sh  package-lock.json  package.json  pb_disable-eslint.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.scss  Icons.js  index.js  informed-style.css  store.js
itests/: config.ini  docker-compose.yml  generate_blocks.sh  run_itest.sh  test.sh
itests/tests/: conftest.py  test_squeak_node.py  util.py
proto/: squeak_admin.proto
squeaknode/: __init__.py  main.py
squeaknode/admin/: __init__.py  messages.py  profile_image_util.py  squeak_admin_server_handler.py  squeak_admin_server_servicer.py
squeaknode/bitcoin/: bitcoin_client.py  bitcoin_core_client.py  block_info.py  exception.py
squeaknode/client/: network_controller.py  peer_client.py  peer_downloader.py
squeaknode/config/: config.py
squeaknode/core/: block_range.py  crypto.py  offer.py  (+27 more)
squeakroad-lnd-client/: Cargo.toml
squeakroad-lnd-client/src/: lib.rs
src/: about.rs  account.rs  account_activation.rs  activate_account.rs  active_users.rs  add_listing_images.rs  add_listing_photos.rs  add_shipping_options.rs  admin.rs  all_users.rs  auth.rs  base.rs  config.rs  confirm_order.rs  db.rs  deactivate_account.rs  deactivated_listings.rs  delete_listing.rs  disabled_users.rs  image_util.rs  lightning.rs  listing.rs  listings.rs  main.rs  market_liabilities.rs  models.rs  my_account_balance.rs  my_active_listings.rs  my_approved_listings.rs  my_completed_orders.rs  my_deactivated_listings.rs  my_new_orders.rs  my_paid_orders.rs  my_pending_listings.rs  my_pending_orders.rs  my_processing_orders.rs  my_received_orders.rs  my_refunded_orders.rs  my_rejected_listings.rs  my_unacked_orders.rs  (+38 more)
templates/: about.html.tera  account.html.tera  accountactivation.html.tera  accountbalancechangepage.html.tera  activateaccount.html.tera  addlistingimages.html.tera  addlistingphotos.html.tera  addshippingoptions.html.tera  admin.html.tera  allusers.html.tera  base.html.tera  confirmorder.html.tera  deactivateaccount.html.tera  deactivatedlistingsindex.html.tera  deletelisting.html.tera  disabledusers.html.tera  index.html.tera  listing.html.tera  listingcardpage.html.tera  listingsindex.html.tera  listingtablepage.html.tera  login.html.tera  marketliabilities.html.tera  myaccountbalance.html.tera  myactivelistings.html.tera  myapprovedlistings.html.tera  mycompletedorders.html.tera  mydeactivatedlistings.html.tera  myneworders.html.tera  mypaidorders.html.tera  mypendinglistings.html.tera  myprocessingorders.html.tera  myreceivedorders.html.tera  myrefundedorders.html.tera  myrejectedlistings.html.tera  myunackedorders.html.tera  myunpaidorders.html.tera  myunreadmessages.html.tera  myunsubmittedlistings.html.tera  newlisting.html.tera  (+32 more)
tests/: conftest.py  utils.py
(+115 files in other folders)
