[package]
name = "squeakroad"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { git = "https://github.com/yzernik/Rocket", branch = "upgrade_sqlx_v_0_6", features = ["json", "uuid"] }
serde_json = "1.0.59"
base64 = "0.13.0"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
git = "https://github.com/yzernik/Rocket"
branch = "upgrade_sqlx_v_0_6"
# path = "../Rocket/contrib/db_pools/lib"
features = ["sqlx_sqlite"]

[dependencies.rocket_sync_db_pools]
git = "https://github.com/yzernik/Rocket"
branch = "upgrade_sqlx_v_0_6"
# path = "../Rocket/contrib/sync_db_pools/lib"
features = ["sqlite_pool"]

[dependencies.rocket_auth]
git = "https://github.com/yzernik/rocket_auth"
branch = "update_sqlx_to_v_0_6_0"
# path = "../rocket_auth"
features = ["sqlx-sqlite"]

[dependencies.rocket_dyn_templates]
git = "https://github.com/yzernik/Rocket"
branch = "upgrade_sqlx_v_0_6"
# path = "../Rocket/contrib/dyn_templates"
features = ["tera"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]