[package]
name = "squeakroad"
version = "0.1.8"
description = "Anonymous market with Lighting Network payments"
authors = ["Jonathan Zernik <yzernik@gmail.com>"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
# rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket = { git = "https://github.com/yzernik/Rocket", branch = "upgrade_sqlx_v_0_6", features = ["json", "uuid", "secrets"] }
serde_json = "1.0.59"
base64 = "0.13.0"
figment = { version = "0.10", features = ["toml", "env"] }
serde = "1.0.138"
hex = "0.4.3"
qr_code = { version = "1.1.0", features = ["bmp"] }
pgp = "0.8.0"
tonic_openssl_lnd = "0.1.4"
rexiv2 = "0.9.1"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
# version = "0.1.0-rc.2"
git = "https://github.com/yzernik/Rocket"
branch = "upgrade_sqlx_v_0_6"
features = ["sqlx_sqlite"]

[dependencies.rocket_sync_db_pools]
# version = "0.1.0-rc.2"
git = "https://github.com/yzernik/Rocket"
branch = "upgrade_sqlx_v_0_6"
features = ["sqlite_pool"]

[dependencies.rocket_auth]
# version = "0.4.0"
git = "https://github.com/yzernik/rocket_auth"
branch = "internal_branch_for_rocket_sqlx_0_6_0_post3"
features = ["sqlx-sqlite"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
git = "https://github.com/yzernik/Rocket"
branch = "upgrade_sqlx_v_0_6"
features = ["tera"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
