[metadata]
license_files = LICENSE
author = Jonathan Zernik
description = Node for squeak protocol
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    squeaknode
omit =
    squeaknode/admin/squeak_admin_server_servicer.py
    squeaknode/admin/webapp/app.py
